--- a/vignettes/decaying_dimer.Rmd
+++ b/vignettes/decaying_dimer.Rmd
@@ -133,7 +133,7 @@ out <-
     propensity_funs = propensity_funs,
     nu = nu,
     params = params,
-    method = ssa_em(),
+    method = ode_em(),
     final_time = 10,
     census_interval = .01,
     verbose = FALSE
