update news and version

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,7 +1,11 @@
+fastgssa 0.2.2 (12-07-2019)
+
+* MINOR CHANGE: Renamed `ssa_em()` to `ode_em()`.
+
 fastgssa 0.2.1 (04-07-2019)
 
 * BUG FIX: Fix isinf scope issue for Windows users.
-* MINOR CHANGE: Move ggplot2 to Suggests
+* MINOR CHANGE: Move ggplot2 to Suggests.
 
 fastgssa 0.2.0 (21-06-2019)
 
