rework reaction specification

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,9 @@
+fastgssa 0.2.3 (unreleased)
+
+* MAJOR CHANGE: Remove `nu` and `propensity_functions` from `ssa()`, instead
+  expect a list of `reaction()` objects. This function provides a much more
+  natural interface to specifying the effect and propensity of a reaction.
+
 fastgssa 0.2.2 (12-07-2019)
 
 * MINOR CHANGE: Renamed `ssa_em()` to `ode_em()`.
