--- a/README.Rmd
+++ b/README.Rmd
@@ -6,9 +6,9 @@ output:
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-<a href="https://travis-ci.org/dynverse/fastgssa"><img src="https://travis-ci.org/dynverse/fastgssa.svg" align="left"></a> <a href="https://codecov.io/gh/dynverse/fastgssa"> [![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/dynverse/fastgssa?branch=master&svg=true)](https://ci.appveyor.com/project/dynverse/fastgssa)
+<a href="https://travis-ci.org/dynverse/gillespie"><img src="https://travis-ci.org/dynverse/gillespie.svg" align="left"></a> <a href="https://codecov.io/gh/dynverse/gillespie"> [![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/dynverse/gillespie?branch=master&svg=true)](https://ci.appveyor.com/project/dynverse/gillespie)
 
-# `fastgssa`: Gillespie's Stochastic Simulation Algorithm for impatient people.
+# `gillespie`: Gillespie's Stochastic Simulation Algorithm for impatient people.
 
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(
 set.seed(1)
 ```
 
-**fastgssa** is a fast, scalable, and versatile framework for simulating large systems with 
+**gillespie** is a fast, scalable, and versatile framework for simulating large systems with 
 Gillespie's Stochastic Simulation Algorithm (SSA). It is conceptually based on 
 [GillespieSSA](https://cran.r-project.org/web/packages/GillespieSSA/index.html),
 but rewritten entirely in Rcpp with large scale systems in mind to make
@@ -31,22 +31,22 @@ tau-leaping (ETL), and the Binomial tau-leaping (BTL).
 
 ## Install
 
-You can install the development version of fastgssa from GitHub with
+You can install the development version of gillespie from GitHub with
 
 ```R
-devtools::install_github("dynverse/fastgssa", build_vignettes = TRUE)
+devtools::install_github("dynverse/gillespie", build_vignettes = TRUE)
 ```
 
 ## Examples
 
 To get started, have a look at one of the vignettes:
 
-* [Preparing a run](vignettes/preparing_a_run.md): `vignette("preparing_a_run", package = "fastgssa")`,
-* [Decaying dimerisation](vignettes/decaying_dimer.md): `vignette("decaying_dimer", package = "fastgssa")`.
+* [Preparing a run](vignettes/preparing_a_run.md): `vignette("preparing_a_run", package = "gillespie")`,
+* [Decaying dimerisation](vignettes/decaying_dimer.md): `vignette("decaying_dimer", package = "gillespie")`.
 
 ## Latest changes
 
-Check out `news(package = "fastgssa")` or [NEWS.md](inst/NEWS.md) for a full list of changes.
+Check out `news(package = "gillespie")` or [NEWS.md](inst/NEWS.md) for a full list of changes.
 
 <!-- This section gets automatically generated from inst/NEWS.md, and also generates inst/NEWS -->
 
