--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,4 +1,4 @@
-fastgssa 0.2.3 (unreleased)
+gillespie 0.2.3 (unreleased)
 
 * MAJOR CHANGE: Remove `nu` and `propensity_functions` from `ssa()`, instead
   expect a list of `reaction()` objects. This function provides a much more
@@ -6,16 +6,16 @@ fastgssa 0.2.3 (unreleased)
 
 * MINOR CHANGE: Apply small allocation optimisations to `ssa_btl`, `ssa_etl` and `ode_em`.
 
-fastgssa 0.2.2 (12-07-2019)
+gillespie 0.2.2 (12-07-2019)
 
 * MINOR CHANGE: Renamed `ssa_em()` to `ode_em()`.
 
-fastgssa 0.2.1 (04-07-2019)
+gillespie 0.2.1 (04-07-2019)
 
 * BUG FIX: Fix isinf scope issue for Windows users.
 * MINOR CHANGE: Move ggplot2 to Suggests.
 
-fastgssa 0.2.0 (21-06-2019)
+gillespie 0.2.0 (21-06-2019)
 
 Complete rewrite of the package:
 
@@ -23,15 +23,15 @@ Complete rewrite of the package:
 * User-defined propensity functions get compiled to Rcpp at runtime.
 * All SSA methods now assume the state-change matrix `nu` to be sparse.
 
-fastgssa 0.1.1 (05-01-2018)
+gillespie 0.1.1 (05-01-2018)
 
 * MINOR CHANGE: Added automated testing by travis.
 * MINOR CHANGE: Fixes to documentation.
 * MINOR CHANGE: Also output propensities.
 
-fastgssa 0.1.0 (31-08-2017)
+gillespie 0.1.0 (31-08-2017)
 
-Initial beta release of fastgssa:
+Initial beta release of gillespie:
 
 * Major restructuring of GillespieSSA code.
 * Optimise main algorithm code (e.g. do not save state variables directly to the global environment...).
