allow to plot the name of the experiment

--- a/vignettes/epi_chain.Rmd
+++ b/vignettes/epi_chain.Rmd
@@ -20,13 +20,10 @@ knitr::opts_chunk$set(fig.width = 8, fig.height = 6)
 
 The SIRS epidemiological metapopulation model is defined in Pineda-Krch (2008).
 
-Load package
-```{r}
-library(gillespie)
-```
-
 Define parameters
 ```{r}
+library(gillespie)
+sim_name <- "SIRS metapopulation model"
 patchPopSize <- 500                    # Patch size
 U <- 20                                # Number of patches
 final_time <- 50                       # Final time
@@ -102,6 +99,7 @@ out <- ssa(
   params = params,
   final_time = final_time,
   method = ssa_direct(),
+  sim_name = sim_name
 ) 
 ssa_plot(out)
 ```
@@ -115,6 +113,7 @@ out <- ssa(
   params = params,
   final_time = final_time,
   method = ssa_etl(),
+  sim_name = sim_name
 ) 
 ssa_plot(out)
 ```
@@ -128,6 +127,7 @@ out <- ssa(
   params = params,
   final_time = final_time,
   method = ssa_btl(),
+  sim_name = sim_name
 ) 
 ssa_plot(out)
 ```
