--- a/vignettes/linear_chain.Rmd
+++ b/vignettes/linear_chain.Rmd
@@ -27,13 +27,10 @@ The Linear Chain System consists of M chain reactions with M+1 species as follow
   S_M --cM--> S_(M+1)
 ```
 
-Load package
-```{r}
-library(gillespie)
-```
-
 Define parameters
 ```{r}
+library(gillespie)
+sim_name <- "Linear Chain System"
 M <- 50
 params <- c(c = 1)
 final_time <- 5
@@ -59,7 +56,8 @@ out <- ssa(
   reactions = reactions,
   params = params,
   final_time = final_time,
-  method = ssa_direct()
+  method = ssa_direct(),
+  sim_name = sim_name
 ) 
 ssa_plot(out)
 ```
@@ -72,7 +70,8 @@ out <- ssa(
   reactions = reactions,
   params = params,
   final_time = final_time,
-  method = ssa_etl(tau = .1)
+  method = ssa_etl(tau = .1),
+  sim_name = sim_name
 ) 
 ssa_plot(out)
 ```
@@ -85,7 +84,8 @@ out <- ssa(
   reactions = reactions,
   params = params,
   final_time = final_time,
-  method = ssa_btl(f = 50)
+  method = ssa_btl(f = 50),
+  sim_name = sim_name
 ) 
 ssa_plot(out)
 ```
