--- a/vignettes/logistic_growth.Rmd
+++ b/vignettes/logistic_growth.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Pearl-Verhulst Logistic growth model (Kot, 2001)"
+title: "Pearl-Verhulst Logistic Growth model (Kot, 2001)"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Pearl-Verhulst Logistic growth model (Kot, 2001)}
+  %\VignetteIndexEntry{Pearl-Verhulst Logistic Growth model (Kot, 2001)}
   %\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
 editor_options: 
@@ -33,13 +33,10 @@ This model consists of two reaction channels,
 ```
 where `d'=d+(b-d)N/K`. The propensity functions are `a_1=bN` and `a_2=d'N`.
 
-Load package
-```{r}
-library(gillespie)
-```
-
 Define parameters
 ```{r}
+library(gillespie)
+sim_name <- "Pearl-Verhulst Logistic Growth model"
 params <- c(b = 2, d = 1, K = 1000)
 final_time <- 10
 initial_state <- c(N = 500)
@@ -61,7 +58,8 @@ out <- ssa(
   reactions = reactions,
   params = params,
   final_time = final_time,
-  method = ssa_direct()
+  method = ssa_direct(),
+  sim_name = sim_name
 ) 
 ssa_plot(out)
 ```
@@ -74,7 +72,8 @@ out <- ssa(
   reactions = reactions,
   params = params,
   final_time = final_time,
-  method = ssa_etl(tau = .03)
+  method = ssa_etl(tau = .03),
+  sim_name = sim_name
 ) 
 ssa_plot(out)
 ```
@@ -87,7 +86,8 @@ out <- ssa(
   reactions = reactions,
   params = params,
   final_time = final_time,
-  method = ssa_btl(f = 5)
+  method = ssa_btl(f = 5),
+  sim_name = sim_name
 ) 
 ssa_plot(out)
 ```
