--- a/vignettes/radioactive_decay.Rmd
+++ b/vignettes/radioactive_decay.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Radioactive decay model (Gillespie, 1977)"
+title: "Radioactive Decay model (Gillespie, 1977)"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Radioactive decay model (Gillespie, 1977)}
+  %\VignetteIndexEntry{Radioactive Decay model (Gillespie, 1977)}
   %\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
 editor_options: 
@@ -24,13 +24,10 @@ It consists of a single species and single reaction channels,
 X --c--> 0
 ```
 
-Load package
-```{r}
-library(gillespie)
-```
-
 Define parameters
 ```{r}
+library(gillespie)
+sim_name <- "Radioactive Decay model"
 params <- c(k = 0.5)
 final_time <- 20
 initial_state <- c(N = 1000)
@@ -51,7 +48,8 @@ out <- ssa(
   reactions = reactions,
   params = params,
   final_time = final_time,
-  method = ssa_direct()
+  method = ssa_direct(),
+  sim_name = sim_name
 ) 
 ssa_plot(out)
 ```
@@ -64,7 +62,8 @@ out <- ssa(
   reactions = reactions,
   params = params,
   final_time = final_time,
-  method = ssa_etl(tau = .003)
+  method = ssa_etl(tau = .003),
+  sim_name = sim_name
 ) 
 ssa_plot(out)
 ```
@@ -77,7 +76,8 @@ out <- ssa(
   reactions = reactions,
   params = params,
   final_time = final_time,
-  method = ssa_btl()
+  method = ssa_btl(),
+  sim_name = sim_name
 ) 
 ssa_plot(out)
 ```
