--- a/vignettes/rm_predator_prey.Rmd
+++ b/vignettes/rm_predator_prey.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Rosenzweig-MacArthur predator-prey model (Pineda-Krch et al., 2007)"
+title: "Rosenzweig-MacArthur Predator-Prey model (Pineda-Krch et al., 2007)"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Rosenzweig-MacArthur predator-prey model (Pineda-Krch et al., 2007)}
+  %\VignetteIndexEntry{Rosenzweig-MacArthur Predator-Prey model (Pineda-Krch et al., 2007)}
   %\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
 editor_options: 
@@ -43,13 +43,10 @@ a4 = c*alpha/(1+wN) * N * P
 a5 = g * P
 ```
 
-Load package
-```{r}
-library(gillespie)
-```
-
 Define parameters
 ```{r}
+library(gillespie)
+sim_name <- "Rosenzweig-MacArthur Predator-Prey model"
 params <- c(
   b = 2, 
   d = 1,
@@ -82,7 +79,8 @@ out <- ssa(
   reactions = reactions,
   params = params,
   final_time = final_time,
-  method = ssa_direct()
+  method = ssa_direct(),
+  sim_name = sim_name
 ) 
 ssa_plot(out)
 ```
@@ -95,7 +93,8 @@ out <- ssa(
   reactions = reactions,
   params = params,
   final_time = final_time,
-  method = ssa_etl(tau = .01)
+  method = ssa_etl(tau = .01),
+  sim_name = sim_name
 ) 
 ssa_plot(out)
 ```
@@ -108,7 +107,8 @@ out <- ssa(
   reactions = reactions,
   params = params,
   final_time = final_time,
-  method = ssa_btl()
+  method = ssa_btl(),
+  sim_name = sim_name
 ) 
 ssa_plot(out)
 ```
