--- a/README.Rmd
+++ b/README.Rmd
@@ -2,6 +2,8 @@
 output: 
   github_document:
     toc: TRUE
+editor_options: 
+  chunk_output_type: console
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
