--- a/vignettes/decaying_dimer.Rmd
+++ b/vignettes/decaying_dimer.Rmd
@@ -27,13 +27,10 @@ The Decaying-Dimerization Reaction Set consists of three species and four reacti
       S2 --c4--> S3
 ```
 
-Load package
-```{r}
-library(gillespie)
-```
-
 Define parameters
 ```{r}
+library(gillespie)
+sim_name <- "Decaying-Dimerizing Reaction Set"
 final_time <- 10
 params <- c(c1 = 1.0, c2 = 0.002, c3 = 0.5, c4 = 0.04)
 initial_state <- c(s1 = 10000, s2 = 0, s3 = 0)
@@ -57,7 +54,8 @@ out <- ssa(
   reactions = reactions,
   params = params,
   final_time = final_time,
-  method = ssa_direct()
+  method = ssa_direct(),
+  sim_name = sim_name
 )
 ssa_plot(out)
 ```
@@ -70,7 +68,8 @@ out <- ssa(
   reactions = reactions,
   params = params,
   final_time = final_time,
-  method = ssa_etl(tau = 0.003)
+  method = ssa_etl(tau = 0.003),
+  sim_name = sim_name
 ) 
 ssa_plot(out)
 ```
@@ -83,7 +82,8 @@ out <- ssa(
   reactions = reactions,
   params = params,
   final_time = final_time,
-  method = ssa_btl()
+  method = ssa_btl(),
+  sim_name = sim_name
 ) 
 ssa_plot(out)
 ```
