--- a/vignettes/lotka_predator_prey.Rmd
+++ b/vignettes/lotka_predator_prey.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Lotka predator-prey model (Gillespie, 1977; Kot, 2001)"
+title: "Lotka Predator-Prey model (Gillespie, 1977; Kot, 2001)"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Lotka predator-prey model (Gillespie, 1977; Kot, 2001)}
+  %\VignetteIndexEntry{Lotka Predator-Prey model (Gillespie, 1977; Kot, 2001)}
   %\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
 editor_options: 
@@ -31,13 +31,10 @@ consisting of the three reaction channels,
       Y1 --c3--> 0
 ```
 
-Load package
-```{r}
-library(gillespie)
-```
-
 Define parameters
 ```{r}
+library(gillespie)
+sim_name <- "Lotka Predator-Prey model"
 params <- c(c1 = 10, c2 = .01, c3 = 10)
 final_time <- 2
 initial_state <- c(Y1 = 1000, Y2 = 1000)
@@ -60,7 +57,8 @@ out <- ssa(
   reactions = reactions,
   params = params,
   final_time = final_time,
-  method = ssa_direct()
+  method = ssa_direct(),
+  sim_name = sim_name
 ) 
 ssa_plot(out)
 ```
@@ -73,7 +71,8 @@ out <- ssa(
   reactions = reactions,
   params = params,
   final_time = final_time,
-  method = ssa_etl(tau = .002)
+  method = ssa_etl(tau = .002),
+  sim_name = sim_name
 ) 
 ssa_plot(out)
 ```
@@ -86,7 +85,8 @@ out <- ssa(
   reactions = reactions,
   params = params,
   final_time = final_time,
-  method = ssa_btl(f = 100)
+  method = ssa_btl(f = 100),
+  sim_name = sim_name
 ) 
 ssa_plot(out)
 ```
