--- a/vignettes/epi_chain.Rmd
+++ b/vignettes/epi_chain.Rmd
@@ -101,7 +101,7 @@ out <- ssa(
   method = ssa_direct(),
   sim_name = sim_name
 ) 
-ssa_plot(out)
+autoplot.ssa(out)
 ```
 
 Run simulations with the Explict tau-leap method
@@ -115,7 +115,7 @@ out <- ssa(
   method = ssa_etl(),
   sim_name = sim_name
 ) 
-ssa_plot(out)
+autoplot.ssa(out)
 ```
 
 Run simulations with the Binomial tau-leap method
@@ -129,5 +129,5 @@ out <- ssa(
   method = ssa_btl(),
   sim_name = sim_name
 ) 
-ssa_plot(out)
+autoplot.ssa(out)
 ```
