--- a/vignettes/lotka_predator_prey.Rmd
+++ b/vignettes/lotka_predator_prey.Rmd
@@ -60,7 +60,7 @@ out <- ssa(
   method = ssa_direct(),
   sim_name = sim_name
 ) 
-ssa_plot(out)
+autoplot.ssa(out)
 ```
 
 Run simulations with the Explict tau-leap method
@@ -74,7 +74,7 @@ out <- ssa(
   method = ssa_etl(tau = .002),
   sim_name = sim_name
 ) 
-ssa_plot(out)
+autoplot.ssa(out)
 ```
 
 Run simulations with the Binomial tau-leap method
@@ -88,5 +88,5 @@ out <- ssa(
   method = ssa_btl(f = 100),
   sim_name = sim_name
 ) 
-ssa_plot(out)
+autoplot.ssa(out)
 ```
