--- a/vignettes/radioactive_decay.Rmd
+++ b/vignettes/radioactive_decay.Rmd
@@ -51,7 +51,7 @@ out <- ssa(
   method = ssa_direct(),
   sim_name = sim_name
 ) 
-ssa_plot(out)
+autoplot.ssa(out)
 ```
 
 Run simulations with the Explict tau-leap method
@@ -65,7 +65,7 @@ out <- ssa(
   method = ssa_etl(tau = .003),
   sim_name = sim_name
 ) 
-ssa_plot(out)
+autoplot.ssa(out)
 ```
 
 Run simulations with the Binomial tau-leap method
@@ -79,5 +79,5 @@ out <- ssa(
   method = ssa_btl(),
   sim_name = sim_name
 ) 
-ssa_plot(out)
+autoplot.ssa(out)
 ```
