--- a/vignettes/rm_predator_prey.Rmd
+++ b/vignettes/rm_predator_prey.Rmd
@@ -82,7 +82,7 @@ out <- ssa(
   method = ssa_direct(),
   sim_name = sim_name
 ) 
-ssa_plot(out)
+autoplot.ssa(out)
 ```
 
 Run simulations with the Explict tau-leap method
@@ -96,7 +96,7 @@ out <- ssa(
   method = ssa_etl(tau = .01),
   sim_name = sim_name
 ) 
-ssa_plot(out)
+autoplot.ssa(out)
 ```
 
 Run simulations with the Binomial tau-leap method
@@ -110,5 +110,5 @@ out <- ssa(
   method = ssa_btl(),
   sim_name = sim_name
 ) 
-ssa_plot(out)
+autoplot.ssa(out)
 ```
