--- a/vignettes/lotka_predator_prey.Rmd
+++ b/vignettes/lotka_predator_prey.Rmd
@@ -85,7 +85,7 @@ out <- ssa(
   reactions = reactions,
   params = params,
   final_time = final_time,
-  method = ssa_btl(f = 100),
+  method = ssa_btl(mean_firings = 100),
   sim_name = sim_name
 ) 
 autoplot.ssa(out)
