--- a/vignettes/epi_chain.Rmd
+++ b/vignettes/epi_chain.Rmd
@@ -68,22 +68,22 @@ reactions <- unlist(lapply(
       reaction(
         propensity = paste0("(1 - epsilon) * beta * ", Si, " * ", Ii), 
         effect = setNames(c(-1, +1), c(Si, Ii)),
-        name = "intra_patch_infection"
+        name = paste0("intra_patch_infection_", i)
       ),
       reaction(
         propensity = paste0("epsilon * beta * ", Si, " * ", Ij),
         effect = setNames(c(-1, +1), c(Si, Ii)),
-        name = "inter_patch_infection"
+        name = paste0("inter_patch_infection_", i)
       ), 
       reaction(
         propensity = paste0("gamma * ", Ii),
         effect = setNames(-1, Ii),
-        name = "recovery_from_infection"
+        name = paste0("recovery_from_infection_", i)
       ),
       reaction(
         propensity = paste0("rho * (N - ", Si, " - ", Ii, ")"),
         effect = setNames(+1, Si),
-        name = "loss_of_immunity"
+        name = paste0("loss_of_immunity_", i)
       )
     )
   }
