--- a/vignettes/radioactive_decay.Rmd
+++ b/vignettes/radioactive_decay.Rmd
@@ -40,15 +40,15 @@ reactions <- list(
 )
 ```
 
-Run simulations with the Direct method
-```{r direct}
+Run simulations with the Exact method
+```{r exact}
 set.seed(1)
 out <- ssa(
   initial_state = initial_state,
   reactions = reactions,
   params = params,
   final_time = final_time,
-  method = ssa_direct(),
+  method = ssa_exact(),
   sim_name = sim_name
 ) 
 autoplot.ssa(out)
