--- a/vignettes/epi_chain.Rmd
+++ b/vignettes/epi_chain.Rmd
@@ -22,7 +22,7 @@ The SIRS epidemiological metapopulation model is defined in Pineda-Krch (2008).
 
 Define parameters
 ```{r}
-library(gillespie)
+library(GillespieSSA2)
 sim_name <- "SIRS metapopulation model"
 patchPopSize <- 500                    # Patch size
 U <- 20                                # Number of patches
