--- a/vignettes/linear_chain.Rmd
+++ b/vignettes/linear_chain.Rmd
@@ -29,7 +29,7 @@ The Linear Chain System consists of M chain reactions with M+1 species as follow
 
 Define parameters
 ```{r}
-library(gillespie)
+library(GillespieSSA2)
 sim_name <- "Linear Chain System"
 M <- 50
 params <- c(c = 1)
