--- a/vignettes/preparing_a_run.Rmd
+++ b/vignettes/preparing_a_run.Rmd
@@ -1,9 +1,8 @@
 ---
-title: "Preparing your first SSA run with gillespie"
-date: "`r Sys.Date()`"
+title: "Preparing your first SSA run with GillespieSSA2"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Preparing your first SSA run with gillespie}
+  %\VignetteIndexEntry{Preparing your first SSA run with GillespieSSA2}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -29,7 +28,7 @@ at $t = 0$. For example, for a system with two species `prey` and `predators`
 where both have an initial population size of 1000, the initial state vector
 is defined as follows.
 ```{r}
-library(gillespie)
+library(GillespieSSA2)
 initial_state <- c(prey = 1000, predators = 1000)
 ```
 
