--- a/vignettes/radioactive_decay.Rmd
+++ b/vignettes/radioactive_decay.Rmd
@@ -26,7 +26,7 @@ X --c--> 0
 
 Define parameters
 ```{r}
-library(gillespie)
+library(GillespieSSA2)
 sim_name <- "Radioactive Decay model"
 params <- c(k = 0.5)
 final_time <- 20
