--- a/vignettes/rm_predator_prey.Rmd
+++ b/vignettes/rm_predator_prey.Rmd
@@ -45,7 +45,7 @@ a5 = g * P
 
 Define parameters
 ```{r}
-library(gillespie)
+library(GillespieSSA2)
 sim_name <- "Rosenzweig-MacArthur Predator-Prey model"
 params <- c(
   b = 2, 
