--- a/vignettes/logistic_growth.Rmd
+++ b/vignettes/logistic_growth.Rmd
@@ -35,7 +35,7 @@ where `d'=d+(b-d)N/K`. The propensity functions are `a_1=bN` and `a_2=d'N`.
 
 Define parameters
 ```{r}
-library(gillespie)
+library(GillespieSSA2)
 sim_name <- "Pearl-Verhulst Logistic Growth model"
 params <- c(b = 2, d = 1, K = 1000)
 final_time <- 10
