clean up meta files

--- a/README.Rmd
+++ b/README.Rmd
@@ -29,7 +29,7 @@ library(tidyverse)
 
 **GillespieSSA2** is a fast, scalable, and versatile framework for simulating large systems with 
 Gillespie's Stochastic Simulation Algorithm (SSA). It is conceptually based on 
-[GillespieSSA](https://cran.r-project.org/web/packages/GillespieSSA/index.html),
+[GillespieSSA](https://cran.r-project.org/package=GillespieSSA),
 but rewritten entirely in Rcpp with large scale systems in mind to make
 it blazingly fast. The SSA methods currently implemented are: Exact, Explicit
 tau-leaping (ETL), and the Binomial tau-leaping (BTL).
