--- a/vignettes/1_preparing_your_first_run.Rmd
+++ b/vignettes/1_preparing_your_first_run.Rmd
@@ -8,12 +8,13 @@ vignette: >
 ---
 
 <!-- github markdown built using 
-rmarkdown::render("vignettes/preparing_a_run.Rmd", output_format = "github_document")
+rmarkdown::render("vignettes/1_preparing_your_first_run.Rmd", output_format = "github_document")
 -->
 
 
 ```{r, setseed, echo=FALSE}
 set.seed(1)
+knitr::opts_chunk$set(fig.width = 6, fig.height = 4)
 ```
 
 
