--- a/vignettes/2_porting_from_GillespieSSA.Rmd
+++ b/vignettes/2_porting_from_GillespieSSA.Rmd
@@ -32,19 +32,19 @@ simName <- "Lotka predator-prey model"         # Name
 x0 <- c(Y1=1000, Y2=1000)
 nu <- matrix(c(+1, -1, 0, 0, 1, -1), nrow = 2, byrow = TRUE)
 a  <- c("c1*Y1", "c2*Y1*Y2","c3*Y2")
-# out <- GillespieSSA::ssa(
-#   x0 = x0,
-#   a = a,
-#   nu = nu,
-#   parms = parms,
-#   tf = tf,
-#   method = ssa.d(),
-#   simName = simName,
-#   censusInterval = .001,
-#   verbose = FALSE,
-#   consoleInterval = 1
-# ) 
-# ssa.plot(out, show.title = TRUE, show.legend = FALSE)
+out <- GillespieSSA::ssa(
+  x0 = x0,
+  a = a,
+  nu = nu,
+  parms = parms,
+  tf = tf,
+  method = ssa.d(),
+  simName = simName,
+  censusInterval = .001,
+  verbose = FALSE,
+  consoleInterval = 1
+) 
+ssa.plot(out, show.title = TRUE, show.legend = FALSE)
 ```
 
 In order to port these objects, it is preferable to use the updated notation from the respective GillespieSSA2 vignette:
