--- a/vignettes/an_introduction.Rmd
+++ b/vignettes/an_introduction.Rmd
@@ -1,20 +1,21 @@
 ---
-title: "Preparing your first SSA run with GillespieSSA2"
+title: "Introduction to GillespieSSA2"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Preparing your first SSA run with GillespieSSA2}
+  %\VignetteIndexEntry{Introduction to GillespieSSA2}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
 
 <!-- github markdown built using 
-rmarkdown::render("vignettes/1_preparing_your_first_run.Rmd", output_format = "github_document")
+rmarkdown::render("vignettes/step1_introduction.Rmd", output_format = "github_document")
 -->
 
 
 ```{r, setseed, echo=FALSE}
 set.seed(1)
 knitr::opts_chunk$set(fig.width = 6, fig.height = 4)
+if("package:GillespieSSA" %in% search()) detach("package:GillespieSSA", unload=TRUE) 
 ```
 
 
