--- a/vignettes/decaying_dimer.Rmd
+++ b/vignettes/decaying_dimer.Rmd
@@ -16,6 +16,7 @@ rmarkdown::render("vignettes/decaying_dimer.Rmd", output_format = "github_docume
 ```{r, setseed, echo=FALSE}
 set.seed(1)
 knitr::opts_chunk$set(fig.width = 6, fig.height = 4)
+if("package:GillespieSSA" %in% search()) detach("package:GillespieSSA", unload=TRUE) 
 ```
 
 The Decaying-Dimerization Reaction Set consists of three species and four reaction channels.
