--- a/vignettes/linear_chain.Rmd
+++ b/vignettes/linear_chain.Rmd
@@ -16,6 +16,7 @@ rmarkdown::render("vignettes/linear_chain.Rmd", output_format = "github_document
 ```{r, setseed, echo=FALSE}
 set.seed(1)
 knitr::opts_chunk$set(fig.width = 6, fig.height = 4)
+if("package:GillespieSSA" %in% search()) detach("package:GillespieSSA", unload=TRUE) 
 ```
 
 The Linear Chain System consists of M chain reactions with M+1 species as follows:
