--- a/vignettes/radioactive_decay.Rmd
+++ b/vignettes/radioactive_decay.Rmd
@@ -16,6 +16,7 @@ rmarkdown::render("vignettes/radioactive_decay.Rmd", output_format = "github_doc
 ```{r, setseed, echo=FALSE}
 set.seed(1)
 knitr::opts_chunk$set(fig.width = 6, fig.height = 4)
+if("package:GillespieSSA" %in% search()) detach("package:GillespieSSA", unload=TRUE) 
 ```
 
 This model is also known as the irreversible isomerization reaction set.
