--- a/vignettes/sir.Rmd
+++ b/vignettes/sir.Rmd
@@ -16,6 +16,7 @@ rmarkdown::render("vignettes/sir.Rmd", output_format = "github_document")
 ```{r, setseed, echo=FALSE}
 set.seed(1)
 knitr::opts_chunk$set(fig.width = 6, fig.height = 4)
+if("package:GillespieSSA" %in% search()) detach("package:GillespieSSA", unload=TRUE) 
 ```
 
 The Kermack-McKendrick SIR model is defined as
